--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,81 @@ section {
     margin-right: 25px;
     padding: 30px; }
 
+.containerBurgers {
+  width: 100%;
+  min-height: 90vh;
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; }
+
+.itemBuger {
+  min-width: 450px;
+  min-height: 300px;
+  background: linear-gradient(0deg, rgba(26, 145, 62, 0.4), rgba(26, 145, 62, 0.1)), url(../images/Burger_slider_1.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-origin: border-box;
+  border: 2px solid black;
+  margin: 5px;
+  z-index: 10;
+  overflow: hidden;
+  transition: 500ms ease-in-out 0s; }
+  .itemBuger:active, .itemBuger:hover {
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(128, 128, 128, 0.4)), url(../images/Burger_slider_1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-origin: border-box; }
+    .itemBuger:active .headBurger, .itemBuger:hover .headBurger {
+      top: 95%;
+      transform: translateY(-95%); }
+    .itemBuger:active .infoBurgers, .itemBuger:hover .infoBurgers {
+      bottom: 15%;
+      transform: translateY(-15%); }
+  .itemBuger .headBurger {
+    width: 100%;
+    height: auto;
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    top: 5%;
+    transform: translateY(-5%);
+    transition: 500ms ease-in-out 0s; }
+    .itemBuger .headBurger .nameBurger {
+      width: 250px;
+      height: 50px;
+      background-color: rgba(26, 145, 62, 0.8);
+      color: white;
+      font-family: sans-serif;
+      border-radius: 15px;
+      font-size: 1.5em;
+      padding-top: 10px;
+      margin-top: 5px; }
+    .itemBuger .headBurger .tagBurger {
+      min-width: 60px;
+      height: 60px;
+      background-color: rgba(26, 145, 62, 0.8);
+      color: white;
+      font-family: sans-serif;
+      border-radius: 100px;
+      padding-top: 17px; }
+  .itemBuger .infoBurgers {
+    width: 100%;
+    min-height: 250px;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: relative;
+    bottom: 70%;
+    transform: translateY(-70%);
+    color: lightgrey;
+    font-size: 1.3em;
+    text-align: left;
+    padding: 15px;
+    z-index: 5;
+    transition: 500ms ease-in-out 0s; }
+
 .Well-endPage {
   width: 100%;
   height: auto;
