--- a/scss/style.scss
+++ b/scss/style.scss
@@ -82,6 +82,100 @@ section {
   }
 }
 
+// Page BURGERS
+.containerBurgers {
+  width: 100%;
+  min-height: 90vh;
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+
+.itemBuger{
+  min-width: 450px;
+  min-height: 300px;
+  background: linear-gradient(0deg,rgba($colorGreen, 0.4), rgba($colorGreen, 0.1)), url(../images/Burger_slider_1.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-origin: border-box;
+  border: 2px solid black;
+  margin: 5px;
+  z-index: 10;
+  overflow: hidden;
+  transition: 500ms ease-in-out 0s;
+  &:active, &:hover {
+      background: linear-gradient(0deg,rgba(black, 0.7), rgba(grey, 0.4)), url(../images/Burger_slider_1.jpg);
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-origin: border-box;
+      .headBurger {
+        top: 95%; // 95%
+        transform: translateY(-95%);
+      }
+      .infoBurgers {
+        bottom: 15%; // 95%
+        transform: translateY(-15%);
+      }
+    }
+  .headBurger {
+    width: 100%;
+    height: auto;
+    padding: 15px;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    top: 5%;
+    transform: translateY(-5%);
+    transition: 500ms ease-in-out 0s;
+    // Je vais définir une position bottom, comme ça lors du HOVER le headBurger se déplacera au top..
+    .nameBurger {
+      width: 250px;
+      height: 50px;
+      background-color: rgba($colorGreen, 0.8);
+      color: white;
+      font-family: sans-serif;
+      border-radius: 15px;
+      font-size: 1.5em;
+      padding-top: 10px;
+      margin-top: 5px;
+    }
+    .tagBurger {
+      min-width: 60px;
+      height: 60px;
+      background-color: rgba($colorGreen, 0.8);
+      color: white;
+      font-family: sans-serif;
+      border-radius: 100px;
+      padding-top: 17px;
+    }
+  }
+  .infoBurgers {
+    width: 100%;
+    min-height: 250px;
+    background-color: rgba(black, 0.7);
+    position: relative;
+    bottom: 70%;
+    transform: translateY(-70%);
+    color: lightgrey;
+    font-size: 1.3em;
+    text-align: left;
+    padding: 15px;
+    z-index: 5;
+    transition: 500ms ease-in-out 0s;
+  }
+}
+
+
+
+
+
+
+
+
 // Footer ( for all pages of website )
 .Well-endPage {
   width: 100%;
