--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,7 @@ body {
 
 section {
   width: 100%;
-  padding: 50px;
-  border-top: 2px solid lightgrey;
+  padding: 30px;
   text-align: center; }
 
 .navbar {
@@ -25,37 +24,42 @@ section {
   .navbar .navbar-brand {
     padding: 8px 15px; }
 
-.jumbotron {
+.jumbotronHeader {
   width: 100%;
   height: 100vh;
   z-index: 5;
-  background: linear-gradient(160deg, rgba(0, 100, 0, 0.2), rgba(0, 128, 0, 0.2)), url(http://www.foodnavigator.com/var/plain_site/storage/images/publications/food-beverage-nutrition/foodnavigator.com/market-trends/the-ultimate-taste-test-insect-burger-plant-burger-or-meat-burger/11065919-1-eng-GB/The-ultimate-taste-test-Insect-burger-plant-burger-or-meat-burger.jpg);
+  background: url(http://www.foodnavigator.com/var/plain_site/storage/images/publications/food-beverage-nutrition/foodnavigator.com/market-trends/the-ultimate-taste-test-insect-burger-plant-burger-or-meat-burger/11065919-1-eng-GB/The-ultimate-taste-test-Insect-burger-plant-burger-or-meat-burger.jpg);
   background-position: center;
   background-attachment: fixed;
+  filter: saturate(150%);
   background-size: cover;
   position: relative;
   text-align: center; }
-  .jumbotron .description {
-    width: 98%;
+  .jumbotronHeader .description {
+    width: 100vw;
     position: absolute;
-    top: 70vh;
-    transform: translateY(-70%);
+    top: 7vh;
+    transform: translateY(-7%);
     text-align: center;
-    margin: auto;
+    margin-left: -20px;
     background-color: rgba(0, 0, 0, 0.6); }
-  .jumbotron h1 {
-    color: #1a913e; }
-  .jumbotron p {
-    color: white; }
+  .jumbotronHeader h1 {
+    color: #1a913e;
+    text-shadow: 1px 0px 3px black; }
+  .jumbotronHeader p {
+    color: lightgrey; }
 
 .containerArg {
   display: flex;
   justify-content: space-around;
-  flex-wrap: wrap-reverse; }
+  flex-wrap: wrap-reverse;
+  border-top: 1px solid lightgrey;
+  border-bottom: 1px solid lightgrey; }
+  .containerArg .itemArg {
+    padding: 50px;
+    margin: auto; }
   .containerArg .logoArg {
-    color: #1a913e;
-    margin-right: 25px;
-    padding: 30px; }
+    color: #1a913e; }
 
 .containerBurgers {
   width: 100%;
@@ -68,7 +72,7 @@ section {
 .itemBuger {
   min-width: 450px;
   min-height: 300px;
-  background: linear-gradient(0deg, rgba(26, 145, 62, 0.4), rgba(26, 145, 62, 0.1)), url(../images/Burger_slider_1.jpg);
+  background: url(../images/Burger_slider_1.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -79,11 +83,12 @@ section {
   overflow: hidden;
   transition: 500ms ease-in-out 0s; }
   .itemBuger:active, .itemBuger:hover {
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.7), rgba(128, 128, 128, 0.4)), url(../images/Burger_slider_1.jpg);
+    background: linear-gradient(0deg, rgba(26, 145, 62, 0.4), rgba(26, 145, 62, 0.1)), url(../images/Burger_slider_1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    background-origin: border-box; }
+    background-origin: border-box;
+    filter: saturate(200%); }
     .itemBuger:active .headBurger, .itemBuger:hover .headBurger {
       top: 95%;
       transform: translateY(-95%); }
@@ -132,6 +137,25 @@ section {
     z-index: 5;
     transition: 500ms ease-in-out 0s; }
 
+.jumbotronConcept {
+  width: 100vw;
+  margin-left: -20px;
+  margin-top: 50px;
+  padding-top: 150px;
+  background: linear-gradient(10deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6)), url(../images/Burger_slider_2.jpg);
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  color: lightgrey; }
+  .jumbotronConcept h1 {
+    color: #1a913e; }
+
+.conceptDescription {
+  height: 30; }
+
+.jumbotronEcologie {
+  text-align: right; }
+
 .Well-endPage {
   width: 100%;
   height: auto;
@@ -145,7 +169,7 @@ section {
     flex-wrap: wrap; }
   .Well-endPage .Contact {
     width: 100vw;
-    min-height: 70vh;
+    min-height: 75vh;
     margin-left: -15px;
     margin-top: -25px;
     padding-top: 50px;
@@ -161,8 +185,7 @@ section {
     color: #1a913e; }
   .Well-endPage .navFooter {
     list-style-type: none;
-    margin: 5px;
-    width: 48%;
+    width: 100px;
     margin: auto;
     text-align: center;
     color: grey; }
