--- a/scss/style.scss
+++ b/scss/style.scss
@@ -45,10 +45,9 @@ section {
   width: 100%;
   height: 100vh;
   z-index: 5;
-  background: url(http://www.foodnavigator.com/var/plain_site/storage/images/publications/food-beverage-nutrition/foodnavigator.com/market-trends/the-ultimate-taste-test-insect-burger-plant-burger-or-meat-burger/11065919-1-eng-GB/The-ultimate-taste-test-Insect-burger-plant-burger-or-meat-burger.jpg);
+  background: url(https://goo.gl/RLQ9fk);
   background-position: center;
   background-attachment: fixed;
-  filter: saturate(150%);
   background-size: cover;
   position: relative;
   text-align: center;
@@ -223,7 +222,7 @@ section {
     margin-left: -15px;
     margin-top: -25px;
     padding-top: 50px;
-    background: linear-gradient(160deg, rgba(darkgreen, 0.6), rgba(yellow, 0.3)), url(http://www.foodnavigator.com/var/plain_site/storage/images/publications/food-beverage-nutrition/foodnavigator.com/market-trends/the-ultimate-taste-test-insect-burger-plant-burger-or-meat-burger/11065919-1-eng-GB/The-ultimate-taste-test-Insect-burger-plant-burger-or-meat-burger.jpg);
+    background: linear-gradient(160deg, rgba(darkgreen, 0.6), rgba(yellow, 0.3)), url(https://goo.gl/RLQ9fk);
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
