--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,9 @@ section {
 .jumbotronEcologie {
   text-align: right; }
 
+.containerMaps {
+  width: 100%; }
+
 .Well-endPage {
   width: 100%;
   height: auto;
