--- a/scss/style.scss
+++ b/scss/style.scss
@@ -176,7 +176,6 @@ section {
 
 
 // Page Concept
-
 .jumbotronConcept {
   width: 100vw;
   margin-left: -20px;
@@ -201,7 +200,10 @@ section {
 }
 
 
-
+// Page Restos
+.containerMaps {
+  width: 100%;
+}
 
 
 // Footer ( for all pages of website )
