Add maps.js and UPDATE style.scss

--- a/css/style.css
+++ b/css/style.css
@@ -157,7 +157,33 @@ section {
   text-align: right; }
 
 .containerMaps {
-  width: 100%; }
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  margin: auto; }
+
+#map-canvas-left {
+  height: 450px;
+  width: 50vw; }
+
+#iw_container .iw_title {
+  font-size: 16px;
+  font-weight: bold; }
+
+.iw_content {
+  padding: 15px 15px 15px 0; }
+
+#map-canvas-left {
+  height: 450px;
+  width: 70vw; }
+
+#iw_containerMaps .iw_title {
+  font-size: 16px;
+  font-weight: bold; }
+
+.iw_content {
+  padding: 15px 15px 15px 0; }
 
 .Well-endPage {
   width: 100%;
