--- a/scss/style.scss
+++ b/scss/style.scss
@@ -200,10 +200,40 @@ section {
 }
 
 
+
 // Page Restos
 .containerMaps {
-  width: 100%;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  margin: auto;
 }
+
+  // Maps
+  #map-canvas-left {
+    height: 450px;
+    width: 50vw;
+  }
+  #iw_container .iw_title {
+    font-size: 16px;
+    font-weight: bold;
+  }
+  .iw_content {
+    padding: 15px 15px 15px 0;
+  }
+
+  #map-canvas-left {
+    height: 450px;
+    width: 70vw;
+  }
+  #iw_containerMaps .iw_title {
+    font-size: 16px;
+    font-weight: bold;
+  }
+  .iw_content {
+    padding: 15px 15px 15px 0;
+  }
 
 
 // Footer ( for all pages of website )
