--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,3 @@
-
 // Work css
 $WorkColor: red;
 $colorGreen: rgb(26, 145, 62);
@@ -29,27 +28,27 @@ section {
   text-align: center;
 }
 
-
 //-------------------------------------------------------------------------------------------------------------------------
+
 
 // Menu Navigation Responsive
 .navbar  {
   margin-bottom: -50px;
   z-index: 100;
+  height: 60px;
+  padding-top: 4px;
+  background-color: lightgrey;
+  border-bottom: 1px solid grey;
   .navbar-brand {
-    padding: 0px 15px;
+    padding: 0 15px;
   }
 }
 
 
-.enjoy-css {
-
-}
-
 // Jumbotron header Home page
 .jumbotronHeader {
   width: 100%;
-  height: 70vh;
+  height: 100vh;
   background: url(../images/BurgerHeader.jpg);
   filter: contrast(110%);
   border: 1px solid black;
@@ -61,12 +60,11 @@ section {
   background-size: cover;
   position: relative;
   text-align: center;
-  z-index: 10;
   margin-bottom: -2px;
-  oveflow-y: hidden;
+  overflow-y: hidden;
     .description {
       width: 90vw;
-      height: 65vh;
+      height: 95vh;
       margin-left: -35%;
       margin-top: 43px;
       color: rgba(255,255,255,1);
@@ -85,7 +83,7 @@ section {
     }
   h2 {
     color: lightgrey;
-    text-shadow: 1px 0px 3px black;
+    text-shadow: 1px 1px 3px black;
     font-size: 3em;
   }
   p {
@@ -112,15 +110,14 @@ section {
 
 // Page BURGERS
 .containerBurgers {
-  width: 100%;
   min-height: 90vh;
-  padding: 30px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  padding-top: 100px;
 }
 
-.itemBuger{
+.itemBuger {
   min-width: 450px;
   min-height: 300px;
   background: url(../images/Burger_slider_1.jpg);
@@ -133,20 +130,20 @@ section {
   overflow: hidden;
   transition: 500ms ease-in-out 0s;
   &:active, &:hover {
-      background: linear-gradient(0deg,rgba($colorGreen, 0.4), rgba($colorGreen, 0.1)), url(../images/Burger_slider_1.jpg);
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-      background-origin: border-box;
-      filter: saturate(200%);
-      .headBurger {
-        top: 95%; // 95%
-        transform: translateY(-95%);
-      }
-      .infoBurgers {
-        bottom: 15%; // 95%
-        transform: translateY(-15%);
-      }
+    background: linear-gradient(0deg, rgba($colorGreen, 0.4), rgba($colorGreen, 0.1)), url(../images/Burger_slider_1.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-origin: border-box;
+    filter: saturate(200%);
+    .headBurger {
+      top: 95%; // 95%
+      transform: translateY(-95%);
+    }
+    .infoBurgers {
+      bottom: 15%; // 95%
+      transform: translateY(-15%);
+    }
   }
   .headBurger {
     width: 100%;
@@ -163,7 +160,7 @@ section {
       width: 200px;
       height: 50px;
       background-color: rgba(lightgrey, 0.9);
-      color: dark;
+      color: black;
       font-family: sans-serif;
       border-radius: 15px;
       font-size: 1.5em;
@@ -197,6 +194,23 @@ section {
   }
 }
 
+// FAQ
+.containerFAQ  {
+  height: 60vh;
+  padding-top: 60px;
+  h1 {
+    text-align: justify;
+    color: $colorGreen;
+    text-shadow: 1px 1px 1px black;
+  }
+  p {
+    text-align: justify;
+    font-size: 1.5em;
+    padding-bottom: 15px;
+  }
+}
+
+
 
 // Page Concept
 .jumbotronConcept {
@@ -215,7 +229,7 @@ section {
 }
 
 .conceptDescription {
-  height: 30
+  height: 30vh;
 }
 
 .jumbotronEcologie {
@@ -226,34 +240,22 @@ section {
 
 // Page Restos
 .containerMaps {
-  width: 90%;
+  width: 110vw;
   display: flex;
   justify-content: center;
   padding: 20px;
-  margin: auto;
+  margin-left: -70px;
 }
 
   // Maps
   #map-canvas-left {
-    height: 550px;
-    width: 60vw;
+    margin: auto;
+    height: 90vh;
+    width: 100%;
+    border-radius: 10px;
   }
 
   #iw_container .iw_title {
-    font-size: 16px;
-    font-weight: bold;
-  }
-
-  .iw_content {
-    padding: 15px 15px 15px 0;
-  }
-
-  #map-canvas-left {
-    height: 450px;
-    width: 70vw;
-  }
-
-  #iw_containerMaps .iw_title {
     font-size: 16px;
     font-weight: bold;
   }
@@ -266,39 +268,46 @@ section {
 // Footer ( for all pages of website )
 .Well-endPage {
   width: 100%;
-  height: auto;
-  background-color: $colorGrey;
+  height: 25vh;
   margin-bottom: -50px;
   padding: 25px 10px;
+
   .mainFooter {
-    width: 100%;
+    width: 100vw;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    background-color: $colorGrey;
+    margin-left: -20px;
   }
   .Contact {
     width: 100vw;
-    min-height: 75vh;
+    min-height: 70vh;
     margin-left: -15px;
     margin-top: -25px;
     padding-top: 50px;
-    background: linear-gradient(160deg, rgba(darkgreen, 0.6), rgba(yellow, 0.3)), url(https://goo.gl/RLQ9fk);
+    background: linear-gradient(160deg, rgba(darkgreen, 0.6), rgba(black, 0.8)), url(https://goo.gl/RLQ9fk);
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
   }
   .Signature {
     width: 100%;
-    bottom: 0px;
+    bottom: 0;
     text-align: center;
-    margin-top: 25px;
+    margin-top: 10px;
     color: $colorGreen;
   }
   .navFooter {
     list-style-type: none;
-    width: 100px;
+    width: 200px;
     margin: auto;
     text-align: center;
-    color: grey
+    color: white;
+    background-color: rgba(grey, 0.8);
+    padding: 25px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    border-radius: 10px;
   }
 }
