--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Hind:500|Open+Sans");
 .WorkClass {
   border: 1px solid red;
   background-color: rgba(255, 0, 0, 0.4); }
@@ -17,6 +18,17 @@ section {
   width: 100%;
   padding: 30px;
   text-align: center; }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Hind', sans-serif; }
+
+p {
+  font-family: 'Open sans', sans-serif; }
 
 .navbar {
   margin-bottom: -50px;
@@ -124,7 +136,7 @@ section {
       width: 200px;
       height: 50px;
       background-color: rgba(211, 211, 211, 0.9);
-      color: dark;
+      color: black;
       font-family: sans-serif;
       border-radius: 15px;
       font-size: 1.5em;
@@ -165,9 +177,6 @@ section {
   color: lightgrey; }
   .jumbotronConcept h1 {
     color: #1a913e; }
-
-.conceptDescription {
-  height: 30; }
 
 .jumbotronEcologie {
   text-align: right; }
