--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Hind:500|Open+Sans');
+
 // Work css
 $WorkColor: red;
-$colorGreen: rgb(26, 145, 62);
+$color1: goldenrod;
 $colorGrey: rgba(black, 0.8);
 
 .WorkClass {
@@ -28,6 +30,24 @@ section {
   text-align: center;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5
+{
+  font-family: 'Hind', sans-serif;
+  color: $color1;
+  text-shadow: 0 0 1px black;
+}
+
+li,
+p
+{
+  font-family: 'Open sans', sans-serif;
+}
+
+
 //-------------------------------------------------------------------------------------------------------------------------
 
 
@@ -37,7 +57,6 @@ section {
   z-index: 100;
   height: 60px;
   padding-top: 4px;
-  background-color: lightgrey;
   border-bottom: 1px solid grey;
   .navbar-brand {
     padding: 0 15px;
@@ -60,34 +79,34 @@ section {
   background-size: cover;
   position: relative;
   text-align: center;
+  z-index: 10;
   margin-bottom: -2px;
   overflow-y: hidden;
-    .description {
-      width: 90vw;
-      height: 95vh;
-      margin-left: -35%;
-      margin-top: 43px;
-      color: rgba(255,255,255,1);
-      text-align: center;
-      -webkit-transform: skewX(-12deg);
-      transform: skewX(-12deg);
-      background-color: rgba($colorGreen, 0.85);
-      z-index: 5;
-    }
-    .accrocheHeader {
-      margin: auto;
-      padding-left: 30%;
-      position: relative;
-      top: 55%;
-      transform: translatey(-55%);
-    }
+  .description {
+    width: 100vw;
+    height: 60vh;
+    margin-left: -35%;
+    margin-top: 43px;
+    color: rgba(255,255,255,1);
+    text-align: center;
+    -webkit-transform: skewX(-12deg);
+    transform: skewX(-12deg);
+    background-color: rgba(goldenrod, 0.7);
+    z-index: 5;
+  }
+  .accrocheHeader {
+    margin: auto;
+    padding-left: 30%;
+    position: relative;
+    top: 55%;
+    transform: translatey(-55%);
+  }
   h2 {
-    color: lightgrey;
-    text-shadow: 1px 1px 3px black;
+    color: white;
     font-size: 3em;
   }
   p {
-    color: black;
+    color: white;
   }
 
 }
@@ -104,7 +123,7 @@ section {
     margin: auto;
   }
   .logoArg {
-    color: $colorGreen;
+    color: $color1;
   }
 }
 
@@ -130,7 +149,7 @@ section {
   overflow: hidden;
   transition: 500ms ease-in-out 0s;
   &:active, &:hover {
-    background: linear-gradient(0deg, rgba($colorGreen, 0.4), rgba($colorGreen, 0.1)), url(../images/Burger_slider_1.jpg);
+    background: linear-gradient(0deg, rgba($color1, 0.4), rgba($color1, 0.1)), url(../images/Burger_slider_1.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -171,7 +190,7 @@ section {
     .tagBurger {
       min-width: 50px;
       height: 50px;
-      background-color: rgba($colorGreen, 0.8);
+      background-color: rgba($color1, 0.8);
       color: black;
       font-family: sans-serif;
       border-radius: 100px;
@@ -200,7 +219,7 @@ section {
   padding-top: 60px;
   h1 {
     text-align: justify;
-    color: $colorGreen;
+    color: $color1;
     text-shadow: 1px 1px 1px black;
   }
   p {
@@ -224,13 +243,13 @@ section {
   background-attachment: fixed;
   color: lightgrey;
   h1 {
-    color: $colorGreen;
+    color: $color1;
   }
 }
 
 .conceptDescription {
   height: 30vh;
-
+  margin: 50px 0;
 }
 
 .jumbotronEcologie {
@@ -297,7 +316,7 @@ section {
     bottom: 0;
     text-align: center;
     margin-top: 10px;
-    color: $colorGreen;
+    color: $color1;
   }
   .navFooter {
     list-style-type: none;
