--- a/scss/style.scss
+++ b/scss/style.scss
@@ -191,7 +191,7 @@ section {
 }
 
 .conceptDescription {
-  height: 30
+  height: 30;
 }
 
 .jumbotronEcologie {
@@ -238,6 +238,14 @@ section {
     padding: 15px 15px 15px 0;
   }
 
+  // page resto solo
+
+.restoImg {
+  width: 100%;
+  height: 500px;
+  background-image: url("../images/resto-lyon.jpg");
+  background-size: cover;
+}
 
 // Footer ( for all pages of website )
 .Well-endPage {
@@ -277,4 +285,6 @@ section {
     text-align: center;
     color: grey
   }
+  
+  
 }
