--- a/scss/style.scss
+++ b/scss/style.scss
@@ -268,6 +268,31 @@ p
   margin-left: -70px;
 }
 
+  // Page resto solo
+
+.restoImg {
+  height: 40vh;
+  width: 100%;
+  background: rgba($color1, 0.8);
+  color: black;
+  h2 {
+    color: white;
+  }
+}
+
+.jumbotronResto {
+  width: 100vw;
+  margin-left: -50px;
+  padding-top: 150px;
+  color: lightgrey;
+  background: linear-gradient(10deg, rgba($colorGrey, 0.9), rgba(black, 0.6)), url("../images/resto6.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  h1{
+    color: $color1;
+  }
+}
   // Maps
   #map-canvas-left {
     margin: auto;
@@ -284,6 +309,7 @@ p
   .iw_content {
     padding: 15px 15px 15px 0;
   }
+
 
 
 // Footer ( for all pages of website )
