Finish template burger

--- a/css/style.css
+++ b/css/style.css
@@ -93,13 +93,6 @@ p {
   .containerArg .logoArg {
     color: goldenrod; }
 
-.containerBurgers {
-  min-height: 90vh;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding-top: 100px; }
-
 .itemBuger {
   min-width: 450px;
   min-height: 300px;
@@ -225,6 +218,18 @@ p {
   background-position: center;
   background-attachment: fixed; }
   .jumbotronResto h1 {
+    color: goldenrod; }
+
+.jumbotronBurger {
+  width: 100vw;
+  margin-left: -50px;
+  padding-top: 150px;
+  color: lightgrey;
+  background: linear-gradient(10deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6)), url("../images/Burger_slider_1.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed; }
+  .jumbotronBurger h1 {
     color: goldenrod; }
 
 #map-canvas-left {
