--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,21 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Hind:500|Open+Sans');
 
-// Work css
-$WorkColor: red;
-$color1: goldenrod;
-$colorGrey: rgba(black, 0.8);
 
-.WorkClass {
-  border: 1px solid $WorkColor;
-  background-color: rgba($WorkColor, 0.4);
-}
 
-.WorkProgress {
-  margin-top: 150px;
-  margin-bottom: 150px;
-  background-color: rgba($WorkColor, 0.6);
-}
-// end work css
+$mainColor: goldenrod;
+$secondColor: rgba(black, 0.8);
 
 // CSS general ( no selectors or id's )
 * { box-sizing: border-box; }
@@ -37,7 +25,7 @@ h4,
 h5
 {
   font-family: 'Hind', sans-serif;
-  color: $color1;
+  color: $mainColor;
 }
 
 li,
@@ -46,9 +34,7 @@ p
   font-family: 'Open sans', sans-serif;
 }
 
-
 //-------------------------------------------------------------------------------------------------------------------------
-
 
 // Menu Navigation Responsive
 .navbar  {
@@ -60,8 +46,17 @@ p
   .navbar-brand {
     padding: 0 15px;
   }
+  a {
+    font-size: 1.3em;
+    color: white;
+  }
 }
 
+// Menu Small Screen ("Burger" icon)
+.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+  background-color: #222;
+  text-align: center;
+}
 
 // Jumbotron header Home page
 .jumbotronHeader {
@@ -73,11 +68,11 @@ p
   padding: 1px;
   background-color: black;
   background-position: bottom right;
-  background-attachment: scroll;
+  background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  text-align: center;
+  text-align: justify;
   z-index: 10;
   margin-bottom: -2px;
   overflow-y: hidden;
@@ -90,7 +85,7 @@ p
     text-align: center;
     -webkit-transform: skewX(-12deg);
     transform: skewX(-12deg);
-    background-color: rgba(goldenrod, 0.7);
+    background-color: rgba($mainColor, 0.95);
     z-index: 5;
   }
   .accrocheHeader {
@@ -104,7 +99,6 @@ p
     color: white;
     font-size: 3em;
     text-shadow: 0 0 1px black;
-
   }
   p {
     color: white;
@@ -114,6 +108,8 @@ p
 
 // Arguments bar
 .containerArg {
+  width: 100vw;
+  margin-left: -50px;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap-reverse;
@@ -122,98 +118,31 @@ p
   .itemArg {
     padding: 50px;
     margin: auto;
+    h4 {
+      font-family: 'Hind', sans-serif;
+      font-size: 1.6em;
+      margin-top: 30px;
+      color: $mainColor;
+      text-shadow: 0px 0px 0px $secondColor;
+    }
   }
   .logoArg {
-    color: $color1;
+    color: $mainColor;
   }
 }
 
 // Page BURGERS
-
-.itemBuger {
-  min-width: 450px;
-  min-height: 300px;
-  background: url(../images/Burger_slider_1.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-origin: border-box;
-  border: 2px solid black;
-  z-index: 10;
-  overflow: hidden;
-  transition: 500ms ease-in-out 0s;
-  &:active, &:hover {
-    background: linear-gradient(0deg, rgba($color1, 0.4), rgba($color1, 0.1)), url(../images/Burger_slider_1.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-origin: border-box;
-    filter: saturate(200%);
-    .headBurger {
-      top: 95%; // 95%
-      transform: translateY(-95%);
-    }
-    .infoBurgers {
-      bottom: 15%; // 95%
-      transform: translateY(-15%);
-    }
-  }
-  .headBurger {
-    width: 100%;
-    height: auto;
-    padding: 15px;
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    top: 5%;
-    transform: translateY(-5%);
-    transition: 500ms ease-in-out 0s;
-    // Je vais définir une position bottom, comme ça lors du HOVER le headBurger se déplacera au top..
-    .nameBurger {
-      width: 200px;
-      height: 50px;
-      background-color: rgba(lightgrey, 0.9);
-      color: black;
-      font-family: sans-serif;
-      border-radius: 15px;
-      font-size: 1.5em;
-      padding-top: 10px;
-      margin-top: 5px;
-      border: 1px solid grey;
-    }
-    .tagBurger {
-      min-width: 50px;
-      height: 50px;
-      background-color: rgba($color1, 0.8);
-      color: black;
-      font-family: sans-serif;
-      border-radius: 100px;
-      padding-top: 12px;
-    }
-  }
-  .infoBurgers {
-    width: 100%;
-    min-height: 250px;
-    background-color: rgba(black, 0.7);
-    position: relative;
-    bottom: 70%;
-    transform: translateY(-70%);
-    color: lightgrey;
-    font-size: 1.3em;
-    text-align: left;
-    padding: 15px;
-    z-index: 5;
-    transition: 500ms ease-in-out 0s;
-  }
+.thumbnail {
+  box-shadow: 0 3px 10px $secondColor;
 }
 
 // FAQ
 .containerFAQ  {
-  height: 60vh;
+  min-height: 100vh;
   padding-top: 60px;
   h1 {
     text-align: justify;
-    color: $color1;
+    color: $mainColor;
     text-shadow: 1px 1px 1px black;
   }
   p {
@@ -221,36 +150,47 @@ p
     font-size: 1.5em;
     padding-bottom: 15px;
   }
+   &:hover {
+     cursor: pointer;
+   }
 }
-
-
 
 // Page Concept
 .jumbotronConcept {
   width: 100vw;
+  min-height: 55vh;
   margin-left: -20px;
   margin-top: 50px;
   padding-top: 150px;
-  background: linear-gradient(10deg, rgba($colorGrey, 0.9), rgba(black, 0.6)), url(../images/Burger_slider_2.jpg);
+  background: linear-gradient(10deg, rgba($secondColor, 0.9), rgba(black, 0.6)), url(../images/Burger_slider_2.jpg);
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
   color: lightgrey;
   h1 {
-    color: $color1;
+    color: $mainColor;
   }
 }
 
 .conceptDescription {
   height: 30vh;
-  margin: 50px 0;
+  margin: 30px 0;
+  text-align: justify;
+  h2 {
+    font-size: 35px;
+  }
+  p {
+    font-size: 20px;
+  }
 }
 
 .jumbotronEcologie {
+  background-color: $mainColor;
   text-align: right;
+  h2 {
+    color: white
+  }
 }
-
-
 
 // Page Restos
 .containerMaps {
@@ -261,51 +201,61 @@ p
   margin-left: -70px;
 }
 
-  // Page resto solo
-
+// Page resto solo
 .restoImg {
-  height: 40vh;
+  min-height: 40vh;
   width: 100%;
-  background: rgba($color1, 0.8);
+  background: rgba($mainColor, 0.8);
   color: black;
   h2 {
     color: white;
+    font-size: 30px;
+  }
+  p {
+    font-size: 20px;
+    padding: 35px 70px;
   }
 }
 
 .jumbotronResto {
   width: 100vw;
-  margin-left: -50px;
-  padding-top: 150px;
+  min-height: 55vh;
+  margin-left: -55px;
+  padding-top: 200px;
+  text-align: justify;
   color: lightgrey;
-  background: linear-gradient(10deg, rgba($colorGrey, 0.9), rgba(black, 0.6)), url("../images/resto6.jpg");
+  background: linear-gradient(10deg, rgba($secondColor, 0.9), rgba(black, 0.6)), url("../images/resto6.jpg");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
   h1{
-    color: $color1;
+    color: $mainColor;
   }
 }
 
 .jumbotronBurger {
   width: 100vw;
-  margin-left: -50px;
+  min-height: 55vh;
+  margin-left: -55px;
   padding-top: 150px;
   color: lightgrey;
-  background: linear-gradient(10deg, rgba($colorGrey, 0.9), rgba(black, 0.6)), url("../images/Burger_slider_1.jpg");
+  background: linear-gradient(10deg, rgba($secondColor, 0.9), rgba(black, 0.6)), url("../images/BurgerPage.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: bottom center;
   background-attachment: fixed;
+  text-align: justify;
   h1{
-    color: $color1;
+    margin-top: 25px;
+    color: $mainColor;
   }
 }
   // Maps
   #map-canvas-left {
     margin: auto;
-    height: 90vh;
-    width: 100%;
+    height: 85vh;
+    width: 99%;
     border-radius: 10px;
+    margin-left: -5px;
   }
 
   #iw_container .iw_title {
@@ -322,46 +272,66 @@ p
 // Footer ( for all pages of website )
 .Well-endPage {
   width: 100%;
-  height: 25vh;
+  height: 20vh;
   margin-bottom: -50px;
   padding: 25px 10px;
-
   .mainFooter {
     width: 100vw;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
-    background-color: $colorGrey;
+    background-color: $secondColor;
     margin-left: -20px;
   }
   .Contact {
     width: 100vw;
     min-height: 70vh;
     margin-left: -15px;
-    margin-top: -25px;
-    padding-top: 50px;
-    background: linear-gradient(160deg, rgba(darkgreen, 0.6), rgba(black, 0.8)), url(https://goo.gl/RLQ9fk);
+    padding-top: 100px;
+    background: linear-gradient(to bottom, rgba($secondColor, 0.9), rgba($secondColor, 0.6)), url(https://goo.gl/RLQ9fk);
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
+    color: $mainColor;
+    small {
+      margin-top: 35px;
+      margin-left: 15px;
+      color: white;
+      font-size: 0.6em;
+    }
+    a {
+      color: $mainColor;
+    }
+
+    input,
+    textarea,
+    select  {
+      background-color: rgba(whitesmoke, 0.9);
+      border: 1px solid $mainColor;
+    }
+    .input-group-addon {
+      color: white;
+      background-color: $mainColor;
+    }
   }
   .Signature {
     width: 100%;
     bottom: 0;
     text-align: center;
     margin-top: 10px;
-    color: $color1;
+    color: $mainColor;
   }
   .navFooter {
     list-style-type: none;
-    width: 200px;
+    width: 180px;
     margin: auto;
-    text-align: center;
+    text-align: justify;
     color: white;
-    background-color: rgba(grey, 0.8);
+    background-color: rgba($mainColor, 0.2);
     padding: 25px;
     margin-top: 30px;
     margin-bottom: 10px;
     border-radius: 10px;
+    box-shadow: 0 3px 10px $secondColor;
   }
 }
