--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ p {
     color: goldenrod; }
 
 .conceptDescription {
-  height: 30vh;
+  min-height: 30vh;
   margin: 30px 0;
   text-align: justify; }
   .conceptDescription h2 {
@@ -239,7 +239,7 @@ p {
     .Well-endPage .Contact input,
     .Well-endPage .Contact textarea,
     .Well-endPage .Contact select {
-      background-color: rgba(245, 245, 245, 0.9);
+      background-color: white;
       border: 1px solid goldenrod; }
     .Well-endPage .Contact .input-group-addon {
       color: white;
