--- a/scss/style.scss
+++ b/scss/style.scss
@@ -173,7 +173,7 @@ p
 }
 
 .conceptDescription {
-  height: 30vh;
+  min-height: 30vh;
   margin: 30px 0;
   text-align: justify;
   h2 {
@@ -306,7 +306,7 @@ p
     input,
     textarea,
     select  {
-      background-color: rgba(whitesmoke, 0.9);
+      background-color: rgba(white, 1);
       border: 1px solid $mainColor;
     }
     .input-group-addon {
