--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,8 @@ p {
     color: goldenrod; }
 
 .thumbnail {
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.8); }
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.8);
+  border: 1px solid goldenrod;}
 
 .containerFAQ {
   min-height: 100vh;
@@ -182,7 +183,7 @@ p {
   width: 100vw;
   min-height: 55vh;
   margin-left: -55px;
-  padding-top: 150px;
+  padding-top: 200px;
   color: lightgrey;
   background: linear-gradient(10deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6)), url("../images/BurgerPage.jpg");
   background-size: cover;
