--- a/css/style.css
+++ b/css/style.css
@@ -100,8 +100,7 @@ p {
     color: goldenrod; }
 
 .thumbnail {
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.8);
-  border: 1px solid goldenrod;}
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.8); }
 
 .containerFAQ {
   min-height: 100vh;
@@ -132,7 +131,7 @@ p {
     color: goldenrod; }
 
 .conceptDescription {
-  height: 30vh;
+  min-height: 30vh;
   margin: 30px 0;
   text-align: justify; }
   .conceptDescription h2 {
@@ -141,6 +140,7 @@ p {
     font-size: 20px; }
 
 .jumbotronEcologie {
+  min-height: 30vh;
   background-color: goldenrod;
   text-align: right; }
   .jumbotronEcologie h2 {
@@ -183,7 +183,7 @@ p {
   width: 100vw;
   min-height: 55vh;
   margin-left: -55px;
-  padding-top: 200px;
+  padding-top: 150px;
   color: lightgrey;
   background: linear-gradient(10deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6)), url("../images/BurgerPage.jpg");
   background-size: cover;
@@ -198,7 +198,6 @@ p {
   margin: auto;
   height: 85vh;
   width: 99%;
-  border-radius: 10px;
   margin-left: -5px; }
 
 #iw_container .iw_title {
