--- a/css/style.css
+++ b/css/style.css
@@ -100,8 +100,7 @@ p {
     color: goldenrod; }
 
 .thumbnail {
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.8);
-  border: 1px solid goldenrod;}
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.8); }
 
 .containerFAQ {
   min-height: 100vh;
@@ -183,7 +182,7 @@ p {
   width: 100vw;
   min-height: 55vh;
   margin-left: -55px;
-  padding-top: 200px;
+  padding-top: 150px;
   color: lightgrey;
   background: linear-gradient(10deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6)), url("../images/BurgerPage.jpg");
   background-size: cover;
@@ -192,6 +191,20 @@ p {
   text-align: justify; }
   .jumbotronBurger h1 {
     margin-top: 25px;
+    color: goldenrod; }
+
+.jumbotronEquipe {
+  width: 100vw;
+  min-height: 55vh;
+  margin-left: -55px;
+  padding-top: 200px;
+  text-align: justify;
+  color: lightgrey;
+  background: linear-gradient(10deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6)), url("../images/equipetotale.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed; }
+  .jumbotronEquipe h1 {
     color: goldenrod; }
 
 #map-canvas-left {
