--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,7 @@ p {
   min-height: 55vh;
   margin-left: -55px;
   padding-top: 200px;
-  text-align: justify;
+  text-align: left;
   color: lightgrey;
   background: linear-gradient(10deg, rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.6)), url("../images/equipetotale.jpg");
   background-size: cover;
@@ -211,8 +211,7 @@ p {
 #map-canvas-left {
   margin: auto;
   height: 85vh;
-  width: 99%;
-  margin-left: -5px; }
+  width: 100%; }
 
 #iw_container .iw_title {
   font-size: 16px;
